--- a/wofi/config
+++ b/wofi/config
@@ -3,7 +3,7 @@ show=drun
 width=30%
 lines=8
 line_wrap=word
-term=kitty
+term=terminator
 allow_markup=true
 always_parse_args=false
 show_all=true
@@ -17,4 +17,4 @@ image_size=20
 display_generic=false
 location=center
 key_expand=Tab
-insensitive=false
+insensitive=true
