--- a/terminator/config
+++ b/terminator/config
@@ -3,7 +3,7 @@
   always_split_with_profile = True
 [keybindings]
 [profiles]
-  [[default]]
+  [[default_old]]
     background_color = "#002b36"
     background_darkness = 0.95
     background_type = transparent
@@ -26,7 +26,7 @@
     background_image = None
     foreground_color = "#cad3f5"
     palette = "#494d64:#ed8796:#a6da95:#eed49f:#8aadf4:#f5bde6:#8bd5ca:#b8c0e0:#5b6078:#ed8796:#a6da95:#eed49f:#8aadf4:#f5bde6:#8bd5ca:#a5adcb"
-  [[Catppuccin_Mocha]]
+  [[default]]
     background_color = "#1e1e2e"
     background_darkness = 0.95
     background_type = transparent
