add mpris module

--- a/waybar/config
+++ b/waybar/config
@@ -5,8 +5,8 @@
     "width": 1650,
     "margin": "3, 0, 2, 0",
     // Choose the order of the modules
-    "modules-left": ["custom/wmname","hyprland/workspaces","sway/mode","cpu","custom/separator","memory","custom/separator","network", "custom/recorder", "custom/audiorec"],
-    "modules-center": ["hyprland/window","mpd"],
+    "modules-left": ["custom/wmname","hyprland/workspaces","sway/mode","cpu","custom/separator","memory", "custom/recorder", "custom/audiorec", "custom/separator", "mpris"],
+    "modules-center": ["hyprland/window"],
     "modules-right": [
         "tray",
         "custom/separator",
@@ -155,7 +155,27 @@
       "tooltip-format-disconnected": "MPD (disconnected)",
       "max-length": 45
     },
-
+    "mpris": {
+      "format": "{player_icon} {dynamic}",
+      "format-paused": "{status_icon} <i>{dynamic}</i>",
+      "dynamic-len": 50,
+      "dynamic-importance-order": [
+        "title",
+        "artist",
+        "album",
+        "position",
+        "length"
+      ],
+      "player-icons": {
+        "default": "▶",
+        "mpv": "🎵",
+        "Plexamp": "🎵"
+      },
+      "status-icons": {
+        "paused": "⏸"
+      },
+      // "ignored-players": ["firefox"]
+    },
     "custom/recorder": {
         "format": " Rec",
         "format-disabled": " Off-air", //An empty format will hide the module.
@@ -197,5 +217,4 @@
         "max-length": 200,
         "separate-outputs": true
       }
-
 }
