add fullscreen bind and Remmina float rule

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -158,6 +158,7 @@ windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
 windowrulev2 = float, title:^(Telegram.*)$
+windowrulev2 = float, title:^(Remmina Remote Desktop Client)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -170,6 +171,8 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, C, togglefloating, 
 bind = $mainMod SHIFT, T, togglegroup, 
+# 1 keeps gaps and bar
+bind = $mainMod, F, fullscreen, 1
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, K, exec, cliphist list | wofi --dmenu --sort-order=default | cliphist decode | wl-copy
 bind = $mainMod, P, pseudo, # dwindle
@@ -220,7 +223,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-
+#audio binds
 bindl=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindl=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl=, XF86AudioMute, exec, playerctl play-pause
