add gaming fullscreen mode

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -173,6 +173,8 @@ bind = $mainMod SHIFT, C, togglefloating,
 bind = $mainMod SHIFT, T, togglegroup, 
 # 1 keeps gaps and bar
 bind = $mainMod, F, fullscreen, 1
+# For fullscreen games
+bind = $mainMod, G, fullscreen
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, K, exec, cliphist list | wofi --dmenu --sort-order=default | cliphist decode | wl-copy
 bind = $mainMod, P, pseudo, # dwindle
