fix suspend to turn on monitors before going to sleep

--- a/swayidle/config
+++ b/swayidle/config
@@ -1,4 +1,4 @@
 timeout 400 'bash /home/dmarshall/.config/hypr/lock.sh'
 timeout 800 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
-timeout 3600 'systemctl suspend' resume 'hyprctl dispatch dpms on'
+timeout 3600 'hyprctl dispatch dpms on; sleep 1; systemctl suspend'
 before-sleep 'bash /home/dmarshall/.config/hypr/lock.sh'
