--- a/swaync/config.json
+++ b/swaync/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
-  "positionX": "right",
+  "positionX": "center",
   "positionY": "top",
   "layer": "top",
   "control-center-layer": "top",
