randomize wallpaper, and create bind for reload

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,6 +14,7 @@ monitor=HDMI-A-2, 1920x1080, -1920x0, 1
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once = hyprpaper
+exec-once = /home/dmarshall/.config/hypr/rand-wallpaper.sh
 exec-once = swaync # notifications
 exec-once = wl-paste --type text --watch cliphist store # test clipboard
 exec-once = wl-paste --type image --watch cliphist store # image clipboard
@@ -181,6 +182,8 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = , PRINT, exec, hyprshot -m region | wl-copy
 bind = $mainMod, L, exec, /home/dmarshall/.config/hypr/lock.sh
+# Reload Wallpaper
+bind = $mainMod SHIFT, W, exec, /home/dmarshall/.config/hypr/rand-wallpaper.sh
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
