--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -5,7 +5,7 @@ preload = /home/dmarshall/Pictures/synthwave-of-kaginawa.jpg
 wallpaper = ,/home/dmarshall/Pictures/synthwave-of-kaginawa.jpg
 
 #enable splash text rendering over the wallpaper
-splash = true
+splash = false
 
 #fully disable ipc
 # ipc = off
