add network and bluetooth tools

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,6 +19,8 @@ exec-once = swaync # notifications
 exec-once = wl-paste --type text --watch cliphist store # test clipboard
 exec-once = wl-paste --type image --watch cliphist store # image clipboard
 exec-once = waybar # status bar
+exec-once = nm-applet --indicator
+exec-once = blueman-applet
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Authentication Popup agent
 exec-once = swayidle -w
 
