--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -158,10 +158,11 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 # Steam Focus issues
-windowrulev2 = stayfocused, title:^()$,class:^(steam)$
-windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
+windowrulev2 = stayfocused, class:^(steam)$
+windowrulev2 = minsize 1 1, class:^(steam)$
 windowrulev2 = float, title:^(Telegram.*)$
 windowrulev2 = float, title:^(Remmina Remote Desktop Client)$
+windowrulev2 = float, class:^(gnome-nettool)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
