start discord and plexamp in the background workspace

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,7 +26,8 @@ exec-once = swayidle -w
 
 exec-once = firefox
 exec-once = /usr/bin/steam-runtime %U
-exec-once = flatpak run de.shorsh.discord-screenaudio
+exec-once = [workspace special:magic silent] flatpak run de.shorsh.discord-screenaudio
+exec-once = [workspace special:magic silent] flatpak run com.plexamp.Plexamp
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
