update wallpaper settings

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,7 +14,7 @@ monitor=HDMI-A-2, 1920x1080, -1920x0, 1
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once = hyprpaper
-exec-once = /home/dmarshall/.config/hypr/rand-wallpaper.sh
+#exec-once = /home/dmarshall/.config/hypr/rand-wallpaper.sh
 exec-once = swaync # notifications
 exec-once = wl-paste --type text --watch cliphist store # test clipboard
 exec-once = wl-paste --type image --watch cliphist store # image clipboard
@@ -40,7 +40,7 @@ $menu = wofi --show drun
 # Some default env vars.
 env = HYPERSHOT_DIR, ~/Pictures/Screenshots
 env = XCURSOR_SIZE,24
-env = GTK_THEME, Adwaita-dark
+env = GTK_THEME, Catppuccin-Mocha-Standard-Lavender-Dark
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 # Use 7700 for rendering
 env = WLR_DRM_DEVICES,/dev/dri/card0
@@ -159,11 +159,11 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 # Steam Focus issues
-windowrulev2 = stayfocused, class:^(steam)$
 windowrulev2 = minsize 1 1, class:^(steam)$
 windowrulev2 = float, title:^(Telegram.*)$
 windowrulev2 = float, title:^(Remmina Remote Desktop Client)$
 windowrulev2 = float, class:^(gnome-nettool)$
+windowrulev2 = float, title:^(Quickgui.*)$, class:^(quickgui)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
