set workspaces for launched apps

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,11 +21,12 @@ exec-once = wl-paste --type image --watch cliphist store # image clipboard
 exec-once = waybar # status bar
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Authentication Popup agent
+# Authentication Popup agent
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = swayidle -w
 
-exec-once = firefox
-exec-once = /usr/bin/steam-runtime %U
+exec-once = [workspace 3 silent] firefox
+exec-once = [workspace 2 silent] /usr/bin/steam-runtime %U
 exec-once = [workspace special:magic silent] flatpak run de.shorsh.discord-screenaudio
 exec-once = [workspace special:magic silent] flatpak run com.plexamp.Plexamp
 
