--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -164,6 +164,7 @@ windowrulev2 = minsize 1 1, class:^(steam)$
 windowrulev2 = float, title:^(Telegram.*)$
 windowrulev2 = float, title:^(Remmina Remote Desktop Client)$
 windowrulev2 = float, class:^(gnome-nettool)$
+windowrulev2 = float, class:^(nm-connection-editor)$
 windowrulev2 = float, class:^(blueman-manager)$
 windowrulev2 = float, title:^(Quickgui.*)$, class:^(quickgui)$
 
