--- a/terminator/config
+++ b/terminator/config
@@ -1,5 +1,6 @@
 [global_config]
   dbus = False
+  suppress_multiple_term_dialog = True
   always_split_with_profile = True
 [keybindings]
 [profiles]
