--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,9 +27,8 @@ exec-once = swayidle -w
 
 exec-once = [workspace 3 silent] firefox
 exec-once = [workspace 2 silent] /usr/bin/steam-runtime %U
-exec-once = [workspace special:magic silent] flatpak run de.shorsh.discord-screenaudio
 exec-once = [workspace special:magic silent] flatpak run com.plexamp.Plexamp
-
+exec-once = [workspace special:magic silent] flatpak run de.shorsh.discord-screenaudio
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
@@ -196,6 +195,11 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+# Move to group tab
+bind = $mainMod SHIFT, left, changegroupactive, b
+bind = $mainMod SHIFT, right, changegroupactive, f
+bind = $mainMod SHIFT, G, moveoutofgroup
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod SHIFT, 1, workspace, 1
