Add move workspace keybinds

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,7 +26,7 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = swayidle -w
 
 exec-once = [workspace 3 silent] firefox
-exec-once = [workspace 2 silent] /usr/bin/steam-runtime %U
+# exec-once = [workspace 2 silent] /usr/bin/steam-runtime %U
 exec-once = [workspace special:magic silent] flatpak run com.plexamp.Plexamp
 exec-once = [workspace special:magic silent] flatpak run de.shorsh.discord-screenaudio
 # Source a file (multi-file configs)
@@ -226,6 +226,9 @@ bind = $mainMod, 8, movetoworkspace, 8
 bind = $mainMod, 9, movetoworkspace, 9
 bind = $mainMod, 0, movetoworkspace, 10
 bind = $mainMod, MINUS, movetoworkspace, 11
+
+bind = $mainMod CTRL, left, movetoworkspace, +1
+bind = $mainMod CTRL, right, movetoworkspace, -1
 
 # Example special workspace (scratchpad)-
 bind = $mainMod, S, togglespecialworkspace, magic
