--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,9 +5,9 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor=DP-2, 1920x1080@144, 0x0, 1
-monitor=DP-1, 1920x1080, 1920x0, 1
-monitor=HDMI-A-2, 1920x1080, -1920x0, 1
+# monitor=DP-2, 1920x1080@144, 0x0, 1
+# monitor=DP-1, 1920x1080, 1920x0, 1
+# monitor=HDMI-A-2, 1920x1080, -1920x0, 1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -25,10 +25,10 @@ exec-once = blueman-applet
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = swayidle -w
 
-exec-once = [workspace 3 silent] firefox
-exec-once = [workspace 2 silent] /usr/bin/steam-runtime %U
-exec-once = [workspace special:magic silent] flatpak run de.shorsh.discord-screenaudio
-exec-once = [workspace special:magic silent] flatpak run com.plexamp.Plexamp
+exec-once = [workspace 1 silent] firefox
+#exec-once = [workspace 2 silent] /usr/bin/steam-runtime %U
+#exec-once = [workspace special:magic silent] flatpak run de.shorsh.discord-screenaudio
+#exec-once = [workspace special:magic silent] flatpak run com.plexamp.Plexamp
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -43,8 +43,8 @@ env = HYPERSHOT_DIR, ~/Pictures/Screenshots
 env = XCURSOR_SIZE,24
 env = GTK_THEME, Catppuccin-Mocha-Standard-Lavender-Dark
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
-# Use 7700 for rendering
-env = WLR_DRM_DEVICES,/dev/dri/card0
+# Use Intel for rendering
+env = WLR_DRM_DEVICES,/dev/dri/card1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -56,10 +56,11 @@ input {
 
     follow_mouse = 1
     # Disable mouse accel
-    accel_profile = flat
+    #accel_profile = flat
 
     touchpad {
-        natural_scroll = no
+        natural_scroll = yes
+        clickfinger_behavior = true
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -139,7 +140,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe = on
 }
 
 misc {
@@ -238,4 +239,6 @@ bindm = $mainMod, mouse:273, resizewindow
 #audio binds
 bindl=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindl=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindl=, XF86AudioMute, exec, playerctl play-pause
+bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindle=,XF86MonBrightnessDown,exec,brightnessctl set 10%-
+bindle=,XF86MonBrightnessUp,exec,brightnessctl set +10% 
