--- a/waybar/config
+++ b/waybar/config
@@ -2,7 +2,7 @@
     "layer": "top",
     "position": "top",
     "height": 33,
-    "width": 1650,
+    "width": 1450,
     "margin": "3, 0, 2, 0",
     // Choose the order of the modules
     "modules-left": ["hyprland/workspaces","sway/mode","cpu","custom/separator","memory", "custom/recorder","custom/separator", "disk", "custom/audiorec", "custom/separator", "mpris"],
@@ -15,6 +15,8 @@
         "custom/notification",
         "custom/separator",
         "pulseaudio",
+        "backlight",
+        "battery",
         "custom/separator",
         "clock"],
 
@@ -244,7 +246,23 @@
         "escape": true
       },
       "hyprland/window": {
-        "max-length": 200,
+        "max-length": 48,
         "separate-outputs": true
-      }
+      },
+      "backlight": {
+        "device": "intel_backlight",
+        "format": "{percent}% {icon}",
+        "format-icons": ["", ""]
+      },
+      "battery": {
+        "bat": "BAT0",
+        "interval": 60,
+        "states": {
+            "warning": 30,
+            "critical": 15
+        },
+        "format": "{capacity}% {icon}",
+        "format-icons": ["", "", "", "", ""],
+        "max-length": 25
+    }
 }
