--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,3 +12,4 @@
     ~/.config/wofi: wofi
     ~/.config/swaync: swaync
     ~/.config/nvim: nvim
+    /etc/nixos/configuration.nix: nixos/configuration.nix
