--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -245,4 +245,7 @@ bindm = $mainMod, mouse:273, resizewindow
 #audio binds
 bindl=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindl=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindl=, XF86AudioMute, exec, playerctl play-pause
+bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl=, XF86AudioPlay, exec, playerctl play-pause
+bindl=, XF86AudioNext, exec, playerctl next
+bindl=, XF86AudioPrev, exec, playerctl previous
