Set gnome calculator to floating

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -166,7 +166,7 @@ windowrulev2 = float, class:^(gnome-nettool)$
 windowrulev2 = float, class:^(nm-connection-editor)$
 windowrulev2 = float, class:^(blueman-manager)$
 windowrulev2 = float, title:^(Quickgui.*)$, class:^(quickgui)$
-
+windowrulev2 = float, class:^(org.gnome.Calculator)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
