--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -138,7 +138,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe = true
 }
 
 misc {
