--- a/waybar/config
+++ b/waybar/config
@@ -120,7 +120,7 @@
           "on-scroll-down": "shift_down"
         },
         "locale": "C", 
-        "format": "{:  %a,%b %d (   %T ) }",
+        "format": "   {:%a,%b %d (   %T ) }",
         //"format-alt": " {:%a,%b %d}" // Icon: calendar-alt
     },
     "cpu": {
