Fix hyprland issues

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,11 +3,14 @@
 # For a full list, see the wiki
 #
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
+debug:disable_logs = false
+
+# See https://wiki.hyprland.org/Confoiguring/Monitors/
 #monitor=,preferred,auto,auto
 monitor=DP-2, 1920x1080@144, 0x0, 1
 monitor=DP-1, 1920x1080, 1920x0, 1
 monitor=HDMI-A-2, 1920x1080, -1920x0, 1
+monitor=,preferred,auto,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -43,7 +46,8 @@ env = XCURSOR_SIZE,24
 env = GTK_THEME, Catppuccin-Mocha-Standard-Lavender-Dark
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 # Use 7700 for rendering
-env = WLR_DRM_DEVICES,/dev/dri/card0
+# This seems to be broken, similar issue here: https://github.com/hyprwm/Hyprland/issues/5293
+#env = WLR_DRM_DEVICES,/dev/dri/card0
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
