--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -191,7 +191,7 @@ bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, K, exec, cliphist list | wofi --dmenu --sort-order=default | cliphist decode | wl-copy
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = , PRINT, exec, hyprshot -m region | wl-copy
+bind = , PRINT, exec, hyprshot -o ~/Pictures/Screenshots -m region | wl-copy
 bind = $mainMod, L, exec, /home/dmarshall/.config/hypr/lock.sh
 # Reload Wallpaper
 bind = $mainMod SHIFT, W, exec, /home/dmarshall/.config/hypr/rand-wallpaper.sh
