--- a/terminator/config
+++ b/terminator/config
@@ -3,6 +3,7 @@
   suppress_multiple_term_dialog = True
   always_split_with_profile = True
 [keybindings]
+  help = <Primary><Alt>F1
 [profiles]
   [[default]]
     background_color = "#1e1e2e"
