--- a/OpenTabletDriver/settings.json
+++ b/OpenTabletDriver/settings.json
@@ -1,50 +1,38 @@
 {
-  "Revision": "0.7.0.0",
   "Profiles": [
     {
       "Tablet": "Huion H950P",
       "OutputMode": {
         "Path": "OpenTabletDriver.Desktop.Output.LinuxArtistMode",
-        "Settings": [
-          {
-            "Property": "Input",
-            "Value": {
-              "Rotation": 0.0,
-              "Width": 221.0,
-              "Height": 138.0,
-              "XPosition": 110.5,
-              "YPosition": 69.0
-            }
-          },
-          {
-            "Property": "Output",
-            "Value": {
-              "Width": 1920.0,
-              "Height": 1080.0,
-              "XPosition": 2880.0,
-              "YPosition": 540.0
-            }
-          },
-          {
-            "Property": "LockAspectRatio",
-            "Value": false
-          },
-          {
-            "Property": "AreaClipping",
-            "Value": true
-          },
-          {
-            "Property": "AreaLimiting",
-            "Value": true
-          },
-          {
-            "Property": "LockToBounds",
-            "Value": true
-          }
-        ],
+        "Settings": [],
         "Enable": true
       },
       "Filters": [],
+      "AbsoluteModeSettings": {
+        "Display": {
+          "Width": 1920.0,
+          "Height": 1080.0,
+          "X": 2880.0,
+          "Y": 540.0,
+          "Rotation": 0.0
+        },
+        "Tablet": {
+          "Width": 221.0,
+          "Height": 138.0,
+          "X": 110.5,
+          "Y": 69.0,
+          "Rotation": 0.0
+        },
+        "EnableClipping": true,
+        "EnableAreaLimiting": false,
+        "LockAspectRatio": false
+      },
+      "RelativeModeSettings": {
+        "XSensitivity": 10.0,
+        "YSensitivity": 10.0,
+        "RelativeRotation": 0.0,
+        "RelativeResetDelay": "00:00:00.1000000"
+      },
       "Bindings": {
         "TipActivationThreshold": 0.0,
         "TipButton": {
@@ -60,63 +48,18 @@
         "EraserActivationThreshold": 0.0,
         "EraserButton": null,
         "PenButtons": [
-          {
-            "Path": "OpenTabletDriver.Desktop.Binding.MultiKeyBinding",
-            "Settings": [
-              {
-                "Property": "Keys",
-                "Value": "Shift+Space"
-              }
-            ],
-            "Enable": true
-          },
-          {
-            "Path": "OpenTabletDriver.Desktop.Binding.MultiKeyBinding",
-            "Settings": [
-              {
-                "Property": "Keys",
-                "Value": "Control+Alt+Minus"
-              }
-            ],
-            "Enable": true
-          }
+          null,
+          null
         ],
         "AuxButtons": [
-          {
-            "Path": "OpenTabletDriver.Desktop.Binding.MouseBinding",
-            "Settings": [
-              {
-                "Property": "Button",
-                "Value": "Right"
-              }
-            ],
-            "Enable": true
-          },
-          {
-            "Path": "OpenTabletDriver.Desktop.Binding.MultiKeyBinding",
-            "Settings": [
-              {
-                "Property": "Keys",
-                "Value": "Control+Shift+A"
-              }
-            ],
-            "Enable": true
-          },
           null,
           null,
           null,
           null,
           null,
-          {
-            "Path": "OpenTabletDriver.Desktop.Binding.MultiKeyBinding",
-            "Settings": [
-              {
-                "Property": "Keys",
-                "Value": "Control+Z"
-              }
-            ],
-            "Enable": true
-          }
+          null,
+          null,
+          null
         ],
         "MouseButtons": [],
         "MouseScrollUp": null,
@@ -124,5 +67,7 @@
       }
     }
   ],
+  "LockUsableAreaDisplay": true,
+  "LockUsableAreaTablet": true,
   "Tools": []
 }
