--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-OpenTabletDriver/Cache
-OpenTabletDriver/daemon.log
-OpenTabletDriver/Logs/*
-obs-studio/logs
-obs-studio/profiler_data
-obs-studio/basic/profiles/*/service.json*
-blender/*/scripts/*
+dotfiles/OpenTabletDriver/Cache
+dotfiles/OpenTabletDriver/daemon.log
+dotfiles/OpenTabletDriver/Logs/*
+dotfiles/obs-studio/logs
+dotfiles/obs-studio/profiler_data
+dotfiles/obs-studio/basic/profiles/*/service.json*
+dotfiles/blender/*/scripts/*
