--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -10,6 +10,7 @@ debug:disable_logs = false
 monitor=DP-2, 1920x1080@144, 1920x0, 1
 monitor=DP-1, 1920x1080, 3840x0, 1
 monitor=HDMI-A-2, 1920x1080, 0x0, 1
+monitor=eDP-1, 3000x2000, 0x0, 2
 monitor=,preferred,auto,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
