--- a/dotfiles/obs-studio/basic/profiles/Untitled/basic.ini
+++ b/dotfiles/obs-studio/basic/profiles/Untitled/basic.ini
@@ -72,8 +72,8 @@ VodTrackIndex=2
 RecRB=true
 RecRBTime=600
 RecFilePath=/home/dmarshall/Videos/Recordings
-RecEncoder=ffmpeg_svt_av1
-Encoder=obs_x264
+RecEncoder=av1_ffmpeg_vaapi
+Encoder=ffmpeg_vaapi
 RecRBSize=6000
 ApplyServiceSettings=true
 UseRescale=false
@@ -96,6 +96,7 @@ RecSplitFileSize=2048
 AudioEncoder=libfdk_aac
 RecAudioEncoder=libfdk_aac
 RecSplitFile=false
+StreamMultiTrackAudioMixes=1
 
 [Hotkeys]
 OBSBasic.StartReplayBuffer={"bindings":[{"alt":true,"key":"OBS_KEY_Z"}]}
