update deprecated hyprland config

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -137,7 +137,8 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    # new_is_master = true # DEPRECATED
+    new_status = master
 }
 
 gestures {
