--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -31,7 +31,7 @@ exec-once = swayidle -w
 exec-once = [workspace 3 silent] firefox
 # exec-once = [workspace 2 silent] /usr/bin/steam-runtime %U
 exec-once = [workspace special:magic silent] flatpak run com.plexamp.Plexamp
-exec-once = [workspace special:magic silent] flatpak run de.shorsh.discord-screenaudio
+exec-once = [workspace special:magic silent] flatpak run com.discordapp.Discord 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
