--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -36,7 +36,7 @@ exec-once = [workspace special:magic silent] flatpak run com.discordapp.Discord
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = terminator
+$terminal = wezterm
 $fileManager = nautilus
 $menu = wofi --show drun
 
@@ -60,6 +60,7 @@ input {
     follow_mouse = 1
     # Disable mouse accel
     accel_profile = flat
+    scroll_factor = 1.0
 
     touchpad {
         natural_scroll = no
