--- a/dotfiles/omp/config.yaml
+++ b/dotfiles/omp/config.yaml
@@ -3,6 +3,8 @@
 version: 2
 final_space: true
 console_title_template: "{{ .Shell }} in {{ .Folder }}"
+var:
+  Empty: ""
 blocks:
   - type: prompt
     alignment: left
@@ -11,7 +13,7 @@ blocks:
       - type: path 
         style: plain
         background: transparent 
-        template: "<magenta>{{ .UserName }}</> <white>at</> <cyan>{{ .HostName }}</> <white>in</> <green>{{ .Path }}</>"
+        template: "<magenta>{{ .UserName }}</> <white>at</> <cyan>{{ .HostName }}</> <white>in</> <green>{{ .Path }}</> <yellow>{ {{ if ne .Var.Empty .Env.IN_NIX_SHELL }}{{ .Env.NIX_SHELL_PACKAGES }}{{ end }} }</>"
         max_width: 0
         min_width: 0
         interactive: false
@@ -56,7 +58,7 @@ blocks:
 transient_prompt:
   foreground: "blue"
   background: transparent
-  template: "❯ "
+  template: '❯ '
 
 secondary_prompt:
   foreground: lightCyan
