--- a/dotfiles/wofi/config
+++ b/dotfiles/wofi/config
@@ -3,7 +3,7 @@ show=drun
 width=30%
 lines=8
 line_wrap=word
-term=terminator
+term=wezterm
 allow_markup=true
 always_parse_args=false
 show_all=true
