--- a/dotfiles/omp/config.yaml
+++ b/dotfiles/omp/config.yaml
@@ -1,66 +1,59 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
 
-version: 2
-final_space: true
-console_title_template: "{{ .Shell }} in {{ .Folder }}"
 var:
   Empty: ""
-blocks:
-  - type: prompt
-    alignment: left
-    newline: true
-    segments:
-      - type: path 
-        style: plain
-        background: transparent 
-        template: "<magenta>{{ .UserName }}</> <white>at</> <cyan>{{ .HostName }}</> <white>in</> <green>{{ .Path }}</> <yellow>{{ if or (eq .Env.IN_NIX_SHELL `impure`) (eq .Env.IN_NIX_SHELL `pure`) }}[ {{ .Env.NIX_SHELL_PACKAGES }} ]{{ end }}</>"
-        max_width: 0
-        min_width: 0
-        interactive: false
-        properties:
-          style: full
-
-      - type: git
-        style: plain
-        background: transparent
-        template: " <darkGray>{{ .UpstreamIcon }}{{ .HEAD }}</>{{ if .Working.Changed }}<red>●</>{{ end }}{{ if .Staging.Changed }}<green>●</>{{ end }}<cyan>{{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}</>"
-        properties:
-          branch_icon: ""
-          fetch_upstream_icon: true
-
-  - type: rprompt
-    overflow: hidden
-    segments:
-      - type: executiontime
-        style: plain
-        foreground: yellow
-        background: transparent
-        properties:
-          threshold: 1000
-          style: austin
-
-  - type: prompt
-    alignment: left
-    newline: true
-    segments:
-      - type: text 
-        style: plain
-        background: transparent 
-        foreground_templates: 
-          - "{{ if gt .Code 0 }}red{{ end }}"
-          - "{{ if eq .Code 0 }}blue{{ end }}"
-        template: "❯ "
-        max_width: 0
-        min_width: 0
-        interactive: false
-  
-
-transient_prompt:
-  foreground: "blue"
-  background: transparent
-  template: '❯ '
-
 secondary_prompt:
+  template: "❯❯ "
   foreground: lightCyan
   background: transparent
-  template: "❯❯ "
+transient_prompt:
+  template: "❯ "
+  foreground: blue
+  background: transparent
+console_title_template: "{{ .Shell }} in {{ .Folder }}"
+blocks:
+- type: prompt
+  alignment: left
+  segments:
+  - properties:
+      cache_duration: none
+      style: full
+    template: <magenta>{{ .UserName }}</> <white>at</> <cyan>{{ .HostName }}</> <white>in</> <green>{{ .Path }}</> <yellow>{{ if or (eq .Env.IN_NIX_SHELL `impure`) (eq .Env.IN_NIX_SHELL `pure`) }}[ 󱄅 {{ .Env.NIX_SHELL_PACKAGES }} ]{{ end }}</>
+    background: transparent
+    type: path
+    style: plain
+  - properties:
+      branch_icon: ""
+      cache_duration: none
+      fetch_upstream_icon: true
+    template: " <darkGray>{{ .UpstreamIcon }}{{ .HEAD }}</>{{ if .Working.Changed }}<red>●</>{{ end }}{{ if .Staging.Changed }}<green>●</>{{ end }}<cyan>{{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}</>"
+    background: transparent
+    type: git
+    style: plain
+  newline: true
+- type: rprompt
+  overflow: hidden
+  segments:
+  - properties:
+      cache_duration: none
+      style: austin
+      threshold: 1000
+    foreground: yellow
+    background: transparent
+    type: executiontime
+    style: plain
+- type: prompt
+  alignment: left
+  segments:
+  - properties:
+      cache_duration: none
+    template: "❯ "
+    background: transparent
+    type: text
+    style: plain
+    foreground_templates:
+    - "{{ if gt .Code 0 }}red{{ end }}"
+    - "{{ if eq .Code 0 }}blue{{ end }}"
+  newline: true
+version: 3
+final_space: true
