update hyprland config

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -31,7 +31,7 @@ exec-once = swayidle -w
 
 exec-once = [workspace 3 silent] firefox
 # exec-once = [workspace 2 silent] /usr/bin/steam-runtime %U
-exec-once = [workspace special:magic silent] flatpak run com.plexamp.Plexamp
+exec-once = [workspace special:music silent] strawberry
 exec-once = [workspace special:magic silent] flatpak run dev.vencord.Vesktop 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -182,7 +182,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod SHIFT, Q, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, C, togglefloating, 
 bind = $mainMod SHIFT, T, togglegroup, 
@@ -241,6 +241,8 @@ bind = $mainMod CTRL, right, movetoworkspace, -1
 # Example special workspace (scratchpad)-
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, M, togglespecialworkspace, music
+bind = $mainMod SHIFT, M, movetoworkspace, special:music
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
