--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -7,8 +7,8 @@ debug:disable_logs = false
 
 # See https://wiki.hyprland.org/Confoiguring/Monitors/
 #monitor=,preferred,auto,auto
-monitor=DP-2, 1920x1080@144, 1920x0, 1
-monitor=DP-1, 1920x1080, 3840x0, 1
+monitor=DP-1, 1920x1080@144, 1920x0, 1
+monitor=DP-2, 1920x1080, 3840x0, 1
 monitor=HDMI-A-2, 1920x1080, 0x0, 1
 monitor=eDP-1, 3000x2000, 0x0, 2
 monitor=,preferred,auto,1
@@ -44,7 +44,10 @@ $menu = wofi --show drun
 # Some default env vars.
 env = HYPERSHOT_DIR, ~/Pictures/Screenshots
 env = XCURSOR_SIZE,24
-env = GTK_THEME, Catppuccin-Mocha-Standard-Lavender-Dark
+#env = GTK_THEME, Adwaita-dark
+#exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+#exec-once = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark"
+
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 # Use 7700 for rendering
 # This seems to be broken, similar issue here: https://github.com/hyprwm/Hyprland/issues/5293
@@ -176,86 +179,5 @@ windowrulev2 = float, class:^(blueman-manager)$
 windowrulev2 = float, title:^(Quickgui.*)$, class:^(quickgui)$
 windowrulev2 = float, class:^(org.gnome.Calculator)$
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal
-bind = $mainMod, C, killactive, 
-bind = $mainMod SHIFT, Q, exit, 
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod SHIFT, C, togglefloating, 
-bind = $mainMod SHIFT, T, togglegroup, 
-# 1 keeps gaps and bar
-bind = $mainMod, F, fullscreen, 1
-# For fullscreen games
-bind = $mainMod, G, fullscreen
-bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod, K, exec, cliphist list | wofi --dmenu --sort-order=default | cliphist decode | wl-copy
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-bind = , PRINT, exec, hyprshot -o ~/Pictures/Screenshots -m region | wl-copy
-bind = $mainMod, L, exec, /home/dmarshall/.config/hypr/lock.sh
-# Reload Wallpaper
-bind = $mainMod SHIFT, W, exec, /home/dmarshall/.config/hypr/rand-wallpaper.sh
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-
-# Move to group tab
-bind = $mainMod SHIFT, left, changegroupactive, b
-bind = $mainMod SHIFT, right, changegroupactive, f
-bind = $mainMod SHIFT, G, moveoutofgroup
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod SHIFT, 1, workspace, 1
-bind = $mainMod SHIFT, 2, workspace, 2
-bind = $mainMod SHIFT, 3, workspace, 3
-bind = $mainMod SHIFT, 4, workspace, 4
-bind = $mainMod SHIFT, 5, workspace, 5
-bind = $mainMod SHIFT, 6, workspace, 6
-bind = $mainMod SHIFT, 7, workspace, 7
-bind = $mainMod SHIFT, 8, workspace, 8
-bind = $mainMod SHIFT, 9, workspace, 9
-bind = $mainMod SHIFT, 0, workspace, 10
-bind = $mainMod SHIFT, MINUS, workspace, 11
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod, 1, movetoworkspace, 1
-bind = $mainMod, 2, movetoworkspace, 2
-bind = $mainMod, 3, movetoworkspace, 3
-bind = $mainMod, 4, movetoworkspace, 4
-bind = $mainMod, 5, movetoworkspace, 5
-bind = $mainMod, 6, movetoworkspace, 6
-bind = $mainMod, 7, movetoworkspace, 7
-bind = $mainMod, 8, movetoworkspace, 8
-bind = $mainMod, 9, movetoworkspace, 9
-bind = $mainMod, 0, movetoworkspace, 10
-bind = $mainMod, MINUS, movetoworkspace, 11
-
-bind = $mainMod CTRL, left, movetoworkspace, +1
-bind = $mainMod CTRL, right, movetoworkspace, -1
-
-# Example special workspace (scratchpad)-
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-bind = $mainMod, M, togglespecialworkspace, music
-bind = $mainMod SHIFT, M, movetoworkspace, special:music
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-#audio binds
-bindl=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindl=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindl=, XF86AudioPlay, exec, playerctl play-pause
-bindl=, XF86AudioNext, exec, playerctl next
-bindl=, XF86AudioPrev, exec, playerctl previous
+# Keybinds
+source = $HOME/.config/hypr/keybinds.conf
