--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -179,5 +179,24 @@ windowrulev2 = float, class:^(blueman-manager)$
 windowrulev2 = float, title:^(Quickgui.*)$, class:^(quickgui)$
 windowrulev2 = float, class:^(org.gnome.Calculator)$
 
+# Rusty Retirement Game Overlay
+windowrulev2 = tag +rtr, title:(Rusty's Retirement)
+windowrulev2 = float, tag:rtr
+
+# Remove this if you don't want rtr to appear in all workspaces
+#windowrulev2 = pin, tag:rtr
+
+# windowrulev2 = size 100% 350, tag:rtr
+windowrulev2 = size 100% 300, tag:rtr
+
+# Move rtr to buttom of the screen
+# windowrulev2 = move 0 730, tag:rtr
+windowrulev2 = move 0 784, tag:rtr
+
+windowrulev2 = noblur, tag:rtr
+windowrulev2 = noshadow, tag:rtr
+windowrulev2 = noborder, tag:rtr
+windowrulev2 = opacity 1.0 override, tag:rtr
+
 # Keybinds
 source = $HOME/.config/hypr/keybinds.conf
